# futhark

./: .gitignore  cps_parser_v0.hs  cps_parser_v1.hs  cps_parser_v2.hs  cps_parser_v3.hs  cps_parser_v4.hs  cps_parser_v5.hs  cps_pre_parser.hs  futhark.cabal  generate.fsx  list_parser.hs  monadic_foldr.hs  persist.hs  readme.md  sum.fsx  sum.hs  unfoldr.hs  unfoldr_v2.hs  unfoldr_v3.hs  unfoldr_v6.hs  unfoldr_v8.hs  unfoldr_v9.hs
.stack-work/install/a604a5e3/flag-cache/: haskell-src-exts-1.17.1-f619bbbe04b24dc3623cdd2f4e6402a7  haskell-src-meta-0.6.0.14-55e9f4ca79069b5d4c19491d2bc45316  language-c-quote-0.11.6.2-58d399b1b57270236c6b8c81b5335a34
.stack-work/install/a604a5e3/lib/x86_64-windows-ghc-7.10.3/futhark-0.1-GJqcXjzuDAgKwUW9oTf4td/Futhark/Util/: Pretty.hi
.stack-work/install/a604a5e3/lib/x86_64-windows-ghc-7.10.3/futhark-0.1-GJqcXjzuDAgKwUW9oTf4td/Language/Futhark/: Core.hi
.stack-work/install/a604a5e3/pkgdb/: futhark-0.1-97c6333156c27b9482d57b9b52cfc3f1.conf  package.cache
examples/: blur-png.py  blur.fut  blur.py  fact.c  fact.fut  fib.c  fib.fut  mandelbrot-visualise.py  mandelbrot.c  mandelbrot.py  mss.c  mss.fut  mss2.fut  test.dat.npy
examples/life/: life.c  life.py  quadlife.py  quadlife_alt.py
examples/lstm cell/: input.txt  lstm-bench.py  lstm.c  lstm.fut  lstm.py
examples/mandelbrot-explorer/: mandelbrot.fut  mandelbrot.py
src/: futhark.hs
src/Language/Futhark/Parser/: Lexer.x  Parser.y  Tokens.hs
