Name:                futhark
Version:             0.1
Synopsis:            An optimising compiler for a functional, array-oriented language.
description:

        Futhark is a data-parallel programming language intended for
        efficient execution on GPUs.  This package implements an
        optimising Futhark compiler.

Homepage:            http://futhark-lang.org
Category:            Language
License:             BSD3
License-file:        LICENSE
Build-type:          Simple
Maintainer:          athas@sigkill.dk

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.10

Library
  -- Packages needed in order to build this package.
  Build-depends: base >= 4 && < 5,
                 array >= 0.4,
                 containers >= 0.5,
                 mtl >= 2.2.1,
                 transformers >= 0.3,
                 srcloc >= 0.4,
                 language-c-quote >= 0.11,
                 mainland-pretty >= 0.4,
                 hashable >= 1.2.1.0,
                 parsec >= 3,
                 regex-tdfa >= 1.2,
                 filepath,
                 unordered-containers >= 0.2.3.3,
                 dlist >= 0.6.0.1,
                 bytestring,
                 text,
                 raw-strings-qq,
                 neat-interpolation >= 0.3,
                 file-embed >= 0.0.9

  Exposed-modules:
                   Futhark.Representation.Primitive
                   Futhark.Util.Pretty
                   Language.Futhark.Attributes
                   Language.Futhark.Core
                   Language.Futhark.Parser
                   Language.Futhark.Syntax

  Other-modules: Language.Futhark.Parser.Parser
                 Language.Futhark.Parser.Lexer


  -- Directories other than the root containing source files.
  hs-source-dirs:      src

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  Build-tools:         alex, happy

  Default-Language:   Haskell2010

  Ghc-Options:        -Wall

Executable futhark
  Main-is: src/futhark.hs

  -- Packages needed in order to build this package.
  Build-depends: base >= 4 && < 5,
                 array >= 0.4,
                 mtl >= 2.2.1,
                 text,
                 transformers,
                 futhark

  Default-Language:   Haskell2010

  Ghc-Options:        -Wall
